--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<div class="base flex flex-center">
+<img src="./../../../assets/images/spotify-logo-inicio.png" alt="">
+
+<button>
+Abrir meu spotify
+</button>
+
+
+</div>
