--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="base flex flex-center">
 <img src="./../../../assets/images/spotify-logo-inicio.png" alt="">
 
-<button>
+<button (click)="abrirPaginaLogin()">
 Abrir meu spotify
 </button>
 
